# odoo-best-practices

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SKILL.md  package.json  pyproject.toml  setup.py
.opencode/: skill.json
analyzer/: __init__.py  baseline.py  checker.py  cli.py  constants.py  graph.py  indexer.py  init_generator.py  mcp_server.py  reporter.py  sarif.py  store.py
bad_patterns/: browse-inside-loop.md  commit-in-business-code.md  copy-context-instead-of-propagate.md  no-acl-for-new-model.md  nocheck-in-constrains.md  raw-sql-without-reason.md  replace-entire-view.md  search-inside-loop.md  sudo-everywhere.md  translate-false-for-user-strings.md  unindexed-foreign-key.md  write-inside-compute.md
docs/: 14.0_actions.md  14.0_data.md  14.0_guidelines.md  14.0_http.md  14.0_module.md  14.0_orm.md  14.0_reports.md  14.0_security.md  14.0_testing.md  14.0_views.md  15.0_actions.md  15.0_data.md  15.0_guidelines.md  15.0_http.md  15.0_module.md  15.0_orm.md  15.0_reports.md  15.0_security.md  15.0_testing.md  15.0_views.md  16.0_actions.md  16.0_data.md  16.0_guidelines.md  16.0_http.md  16.0_module.md  16.0_orm.md  16.0_reports.md  16.0_security.md  16.0_testing.md  16.0_views.md  17.0_actions.md  17.0_data.md  17.0_guidelines.md  17.0_http.md  17.0_module.md  17.0_orm.md  17.0_reports.md  17.0_security.md  17.0_testing.md  17.0_views.md  (+20 more)
knowledge/: account.move.md  account.payment.md  crm.lead.md  hr.employee.md  mail.message.md  product.product.md  project.task.md  purchase.order.md  res.partner.md  res.users.md  sale.order.md  stock.picking.md
rules/: api-email-template.md  api-external-api.md  api-portal.md  api-report-pdf.md  api-web-controllers.md  api-web-services.md  code-api-vs-model.md  code-comments.md  code-decorators.md  code-dependencies.md  code-encoding.md  code-error-handling.md  code-import-order.md  code-logging.md  code-python-style.md  code-versioning.md  data-company-dependent.md  data-csv-import.md  data-default-data.md  data-demo-data.md  data-email-templates.md  data-noupdate.md  data-sequences.md  data-xml-id-naming.md  deploy-config-params.md  deploy-env-detection.md  deploy-feature-flags.md  deploy-logging-config.md  i18n-language-strings.md  i18n-lazy-translation.md  i18n-string-concat.md  i18n-translatable-fields.md  i18n-translation-files.md  lint-api-decorators.md  lint-no-monkey-patch.md  lint-pre-commit.md  migrate-backup-first.md  migrate-idempotent.md  migrate-noupdate-handling.md  migrate-openupgrade.md  (+96 more)
tests/: conftest.py  test_baseline.py  test_checker.py  test_graph.py  test_indexer.py  test_integration.py  test_manifest_parser.py  test_model_parser.py  test_reporter.py  (+4 more)
(+26 files in other folders)
