[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "odoo-best-practices"
version = "1.0.0-beta.1"
description = "Static analysis + knowledge platform for Odoo engineering"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "videcode"}
]
requires-python = ">=3.6"
keywords = ["odoo", "static-analysis", "code-review", "linting", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/your-org/odoo-best-practices"
Repository = "https://github.com/your-org/odoo-best-practices"
Documentation = "https://github.com/your-org/odoo-best-practices"

[project.scripts]
odoo-review = "analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["analyzer*"]
